force-app/main/default/objects/Case/fields/Open_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Open_Sales_Order__c</fullName>
    <label>Open Sales Order</label>
    <length>100</length>
    <type>Text</type>
</CustomField>