force-app/main/default/objects/Case/listViews/Case_Queue_with_2_users_Case.listView-meta.xml
<ListView>
    <fullName>Case_Queue_with_2_users_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Case Queue with 2 users</label>
    <queue>Case_Queue_with_2_users</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>